--- a/.github/workflows/check-versionist.yml
+++ b/.github/workflows/check-versionist.yml
@@ -17,6 +17,6 @@ jobs:
         cd $DIRECTORY
     - name: Start resin-commit-lint
       run: |
-        commit=$(git show $(git rev-parse --verify HEAD) -s --format=%B)
+        commit=$(git show $(git rev-parse --verify HEAD~1) -s --format=%B)
         echo "${commit}"
         resin-commit-lint "${commit}" -c ../config.json
